refactor: 최수주문금액을 넘는지 확인하는 로직의 중복 제거